--- a/index.html
+++ b/index.html
@@ -28,6 +28,72 @@
 					<ul></ul>
 					<div class="slider">
 						<ul>
+						<li> <img src="img/ga/01.jpg" width="640" height="640" </img></li>
+						<li> <img src="img/ga/02.jpg" width="640" height="640" </img></li>
+						<li> <img src="img/ga/03.jpg" width="640" height="640" </img></li>
+						<li> <img src="img/ga/04.jpeg" width="640" height="640" </img></li>
+						<li> <img src="img/ga/05.jpeg" width="640" height="640" </img></li>
+						<li> <img src="img/ga/06.jpg" width="640" height="640" </img></li>
+						</ul>
+					</div>
+					<div class="details">
+						<p>2024 — 2025</p>
+					</div>
+					<div class="title">
+						<p><em>Designing Well-beings: Everyday Consumption</em></p>
+					</div>
+					<div class="desc">
+						<p>It is my absolute honour to be awarded the inaugural Design Trust Graphic Archive Research Fellowship in partnership with the Hong Kong Design Institute (HKDI)! </p>
+						<p>This opportunity has allowed me to combine my experience in design with my research interests in food and systems comprehensive research project. The findings will be presented in a forthcoming publication, also culminating in an exhibition planned for 2028. </p>
+
+						<p class="headlines">(...)</p>
+						<div class="desc open">
+								<p class="tab">
+									<p>Consumption is an integral part of urban life, and over the decades the shifting consumer needs paralleled Hong Kong’s rapid economic and societal transformation.  </p>
+									<p>My research explores such graphic design has shaped perceptions of trust and authenticity in the context of buying and selling in Hong Kong from the 1940s to the 1980s.</p>
+									<p>Check out <a href="https://designtrust.hk/grant-recipients/gabriella-lai/" target="_blank"> my highlight in Design Trust </a> for further details.</p>
+							</p>
+						</div>
+					</div>
+				</div>
+
+
+				<div class="project large">
+
+					<div id="dss" class="project">
+						<ul></ul>
+						<div class="slider">
+							<ul>
+							<li> <img src="img/scuro/01.jpg" width="640" height="640" </img></li>
+							<li> <img src="img/scuro/02.jpg" width="640" height="640" </img></li>
+							<li> <img src="img/scuro/03.JPG" width="640" height="640" </img></li>
+							<li> <img src="img/scuro/04.jpeg" width="640" height="640" </img></li>
+							<li> <img src="img/scuro/05.jpeg" width="640" height="640" </img></li>
+							<li> <img src="img/scuro/06.png" width="640" height="640" </img></li>
+							</ul>
+						</div>
+						<div class="details">
+							<p>2025</p>
+						</div>
+						<div class="title">
+							<p><em>Residenza Lago Scuro</em></p>
+						</div>
+						<div class="desc">
+							<p>Being part of the cohort of <em>Residenza Lago Scuro</em> has unexpectedly become my personal highlight of 2025. </p>
+							<p>Spending two weeks in Cascina Lago Scuro has given me the privilege to reflect and reshuffle my creative approach as a response to the external. </p>
+							<p>I’ve idled, wandered, observed. To conclude the journey I’ve curated a route with three site-specific installations for the open-house showcase, spotting those liminal spaces between human and nonhuman. </p>
+					  	<p>I’ve also loved every morning pastries (the butter!), exquisite meals prepared by the chefs and everyone, and all the late night chats and games. </p>
+							<p>Such a dream to know all these practices and experiences from these creatives all around the world. I really missed the messiness and vibrancy!</p>
+						</div>
+					</div>
+
+
+			<div class="project large">
+
+				<div id="dss" class="project">
+					<ul></ul>
+					<div class="slider">
+						<ul>
 						<li> <img src="img/tmatw/MX_ruler.gif" width="640" height="640" </img></li>
 						<li> <img src="img/tmatw/MX_menu.gif" width="640" height="640" </img></li>
 						</ul>
@@ -163,7 +229,7 @@
 
 				</div>
 				<div class="details">
-					<p>2020 — ongoing</p>
+					<p>2020 — 2024</p>
 				</div>
 				<div class="title">
 					<p><em>Dawn Soil</em></p>
@@ -202,7 +268,7 @@
 
 				</div>
 				<div class="details">
-					<p>2018 — ongoing</p>
+					<p>2018</p>
 				</div>
 				<div class="title">
 					<p><em>Memory Roll</em></p>
@@ -476,8 +542,8 @@
 			<div id="facts">
 					<ul class="dashed">
 					Gabriella Lai (b. Hong Kong) is a multidisciplinary designer who communicates with food and visuals.
-						<li> Currently a research fellow at <a href="https://www.graphicarchive.hk/en/" target="_blank"> Graphic Archive</a>, Hong Kong Design Institute </li>
-						<li> Also a project-based designer who works with graphics, animations, layouts and brand identities </li>
+						<li> Currently baking new projects(!) exploring my interdisciplinary approach in food, design and research </li>
+						<li> Also a project-based designer who works with concept-driven visuals </li>
 						<li> Occasionally making bamboo steamers (it's intangible heritage!) since graduating from Hong Kong Art School in 2022</li>
 					<p>I like to explore the phenomenons of food by conceptual thinking and cultural sensitivity, interpreting the complexities on our relationships with food within cultural, social or political context.	</p>
 					<p>Design is an experimental process of throwing oneself into the deep to catch the essences of the projects, which aesthetics comes with evidence and integrity.</p>
@@ -488,6 +554,7 @@
 
 					<ul class="dashed">
 						Gladly worked and working with
+						<li> <a href="https://www.graphicarchive.hk/en/" target="_blank">Graphic Archive</a>, Hong Kong Design Institute</li>
 						<li> <a href="https://www.pm-artcreation.com" target="_blank">POINTSMAN</a>, Hong Kong</li>
 						<li> <a href="https://www.fooddesignnation.com" target="_blank">Food Design Nation</a></li>
 						<li> <a href="http://eatartcollective.nl" target="_blank"> EAT ART Collective</a>, Rotterdam (The Netherlands)</li>
@@ -502,7 +569,7 @@
 
 
 
-					<ul class="dashed" style="font-size: 15px;">© Gabriella Lai 2025</ul>
+					<ul class="dashed" style="font-size: 15px;">© Gabriella Lai 2026</ul>
 					</div>
 
 
