--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
 					<ul></ul>
 					<div class="slider">
 						<ul>
-						<li> <img src="img/ga/01.jpg" width="640" height="640" </img></li>
-						<li> <img src="img/ga/02.jpg" width="640" height="640" </img></li>
-						<li> <img src="img/ga/03.jpg" width="640" height="640" </img></li>
-						<li> <img src="img/ga/04.jpeg" width="640" height="640" </img></li>
-						<li> <img src="img/ga/05.jpeg" width="640" height="640" </img></li>
-						<li> <img src="img/ga/06.jpg" width="640" height="640" </img></li>
+						<li class="horz"> <img src="img/ga/01.jpg" </img></li>
+						<li class="horz"><img src="img/ga/02.jpg"  </img></li>
+						<li class="horz"> <img src="img/ga/03.jpg" </img></li>
+						<li class="horz"> <img src="img/ga/04.jpeg" </img></li>
+						<li class="horz"> <img src="img/ga/05.jpeg" </img></li>
+						<li class="horz"> <img src="img/ga/06.jpg" </img></li>
 						</ul>
 					</div>
 					<div class="details">
@@ -50,8 +50,7 @@
 						<div class="desc open">
 								<p class="tab">
 									<p>Consumption is an integral part of urban life, and over the decades the shifting consumer needs paralleled Hong Kong’s rapid economic and societal transformation.  </p>
-									<p>My research explores such graphic design has shaped perceptions of trust and authenticity in the context of buying and selling in Hong Kong from the 1940s to the 1980s.</p>
-									<p>Check out <a href="https://designtrust.hk/grant-recipients/gabriella-lai/" target="_blank"> my highlight in Design Trust </a> for further details.</p>
+									<p>My research explores such graphic design has shaped perceptions of trust and authenticity in the context of buying and selling in Hong Kong from the 1940s to the 1980s. Check out <a href="https://designtrust.hk/grant-recipients/gabriella-lai/" target="_blank"> my highlight in Design Trust </a> for further details.</p>
 							</p>
 						</div>
 					</div>
@@ -64,12 +63,12 @@
 						<ul></ul>
 						<div class="slider">
 							<ul>
-							<li> <img src="img/scuro/01.jpg" width="640" height="640" </img></li>
-							<li> <img src="img/scuro/02.jpg" width="640" height="640" </img></li>
-							<li> <img src="img/scuro/03.JPG" width="640" height="640" </img></li>
-							<li> <img src="img/scuro/04.jpeg" width="640" height="640" </img></li>
-							<li> <img src="img/scuro/05.jpeg" width="640" height="640" </img></li>
-							<li> <img src="img/scuro/06.png" width="640" height="640" </img></li>
+							<li class="horz">  <img src="img/scuro/01.jpg" </img></li>
+							<li class="horz">  <img src="img/scuro/02.jpg" </img></li>
+							<li class="horz">  <img src="img/scuro/03.JPG" </img></li>
+							<li class="horz">  <img src="img/scuro/04.jpeg" </img></li>
+							<li class="horz">  <img src="img/scuro/05.jpg" </img></li>
+							<li class="horz">  <img src="img/scuro/06.png" </img></li>
 							</ul>
 						</div>
 						<div class="details">
@@ -79,11 +78,9 @@
 							<p><em>Residenza Lago Scuro</em></p>
 						</div>
 						<div class="desc">
-							<p>Being part of the cohort of <em>Residenza Lago Scuro</em> has unexpectedly become my personal highlight of 2025. </p>
-							<p>Spending two weeks in Cascina Lago Scuro has given me the privilege to reflect and reshuffle my creative approach as a response to the external. </p>
+							<p>Being part of the cohort of <em>Residenza Lago Scuro</em> has unexpectedly become my personal highlight of 2025. Spending two weeks in Cascina Lago Scuro has given me the privilege to reflect and reshuffle my creative approach as a response to the external. </p>
 							<p>I’ve idled, wandered, observed. To conclude the journey I’ve curated a route with three site-specific installations for the open-house showcase, spotting those liminal spaces between human and nonhuman. </p>
-					  	<p>I’ve also loved every morning pastries (the butter!), exquisite meals prepared by the chefs and everyone, and all the late night chats and games. </p>
-							<p>Such a dream to know all these practices and experiences from these creatives all around the world. I really missed the messiness and vibrancy!</p>
+					  	<p>I’ve also loved every morning pastries (the butter!), exquisite meals prepared by the chefs and everyone, and all the late night chats and games. Such a dream to know all these practices and experiences from these creatives all around the world. I really missed the messiness and vibrancy!</p>
 						</div>
 					</div>
 
