--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
 
 			<div class="project large">
 
-				<div id="dss" class="project">
+				<div id="ds" class="project large">
 					<ul></ul>
 					<div class="slider">
 						<ul>
 						<li class="horz"> <img src="img/ga/01.jpg" </img></li>
-						<li class="horz"><img src="img/ga/02.jpg"  </img></li>
+						<li class="horz"> <img src="img/ga/02.jpg" </img></li>
 						<li class="horz"> <img src="img/ga/03.jpg" </img></li>
-						<li class="horz"> <img src="img/ga/04.jpeg" </img></li>
-						<li class="horz"> <img src="img/ga/05.jpeg" </img></li>
+						<li class="horz"> <img src="img/ga/04.jpg" </img></li>
+						<li class="horz"> <img src="img/ga/05.jpg" </img></li>
 						<li class="horz"> <img src="img/ga/06.jpg" </img></li>
 						</ul>
 					</div>
@@ -56,19 +56,17 @@
 					</div>
 				</div>
 
-
 				<div class="project large">
 
-					<div id="dss" class="project">
-						<ul></ul>
+					<div id="ds" class="project large">
 						<div class="slider">
 							<ul>
 							<li class="horz">  <img src="img/scuro/01.jpg" </img></li>
 							<li class="horz">  <img src="img/scuro/02.jpg" </img></li>
-							<li class="horz">  <img src="img/scuro/03.JPG" </img></li>
-							<li class="horz">  <img src="img/scuro/04.jpeg" </img></li>
+							<li class="horz">  <img src="img/scuro/03.jpg" </img></li>
+							<li class="horz">  <img src="img/scuro/04.jpg" </img></li>
 							<li class="horz">  <img src="img/scuro/05.jpg" </img></li>
-							<li class="horz">  <img src="img/scuro/06.png" </img></li>
+							<li class="horz">  <img src="img/scuro/06.png" width="full" height="full" </img></li>
 							</ul>
 						</div>
 						<div class="details">
