--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
 			</div>
 
 			<div class="project large">
-
-				<div id="ds" class="project large">
+			<div id="ds" class="project large">
 					<ul></ul>
 					<div class="slider">
 						<ul>
@@ -54,11 +53,11 @@
 							</p>
 						</div>
 					</div>
-				</div>
+			</div>
+			</div>
 
 				<div class="project large">
-
-					<div id="ds" class="project large">
+				<div id="ds" class="project large">
 						<div class="slider">
 							<ul>
 							<li class="horz">  <img src="img/scuro/01.jpg" </img></li>
@@ -66,7 +65,7 @@
 							<li class="horz">  <img src="img/scuro/03.jpg" </img></li>
 							<li class="horz">  <img src="img/scuro/04.jpg" </img></li>
 							<li class="horz">  <img src="img/scuro/05.jpg" </img></li>
-							<li class="horz">  <img src="img/scuro/06.png" width="full" height="full" </img></li>
+							<li class="horz">  <img src="img/scuro/06.jpg" </img></li>
 							</ul>
 						</div>
 						<div class="details">
@@ -80,11 +79,11 @@
 							<p>I’ve idled, wandered, observed. To conclude the journey I’ve curated a route with three site-specific installations for the open-house showcase, spotting those liminal spaces between human and nonhuman. </p>
 					  	<p>I’ve also loved every morning pastries (the butter!), exquisite meals prepared by the chefs and everyone, and all the late night chats and games. Such a dream to know all these practices and experiences from these creatives all around the world. I really missed the messiness and vibrancy!</p>
 						</div>
-					</div>
+				</div>
+				</div>
 
 
 			<div class="project large">
-
 				<div id="dss" class="project">
 					<ul></ul>
 					<div class="slider">
@@ -112,7 +111,9 @@
 						</div>
 					</div>
 				</div>
+			</div>
 
+		<div class="project large">
 		<div id="" class="project">
 				<div class="still">
 					<img src="img/tmatw/MX_vid.gif" width="640" height="360" frameborder="0" allow="autoplay; fullscreen" allowfullscreen; type="video/mp4"> </img>
