--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 							<ul>
 							<li class="horz">  <img src="img/scuro/01.jpg" </img></li>
 							<li class="horz">  <img src="img/scuro/02.jpg" </img></li>
-							<li class="horz">  <img src="img/scuro/03.jpg" </img></li>
+							<li class="horz">  <img src="img/scuro/07.jpg" </img></li>
 							<li class="horz">  <img src="img/scuro/04.jpg" </img></li>
 							<li class="horz">  <img src="img/scuro/05.jpg" </img></li>
 							<li class="horz">  <img src="img/scuro/06.jpg" </img></li>
@@ -75,7 +75,7 @@
 							<p><em>Residenza Lago Scuro</em></p>
 						</div>
 						<div class="desc">
-							<p>Being part of the cohort of <em>Residenza Lago Scuro</em> has unexpectedly become my personal highlight of 2025. Spending two weeks in Cascina Lago Scuro has given me the privilege to reflect and reshuffle my creative approach as a response to the external. </p>
+							<p>Being part of the cohort of <a href="https://www.residenzalagoscuro.com" target="_blank"><em> Residenza Lago Scuro</em> </a> has unexpectedly become my personal highlight of 2025. Spending two weeks in Cascina Lago Scuro has given me the privilege to reflect and reshuffle my creative approach as a response to the external. </p>
 							<p>I’ve idled, wandered, observed. To conclude the journey I’ve curated a route with three site-specific installations for the open-house showcase, spotting those liminal spaces between human and nonhuman. </p>
 					  	<p>I’ve also loved every morning pastries (the butter!), exquisite meals prepared by the chefs and everyone, and all the late night chats and games. Such a dream to know all these practices and experiences from these creatives all around the world. I really missed the messiness and vibrancy!</p>
 						</div>
