--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
 					<ul></ul>
 					<div class="slider">
 						<ul>
-						<li class="horz"> <img src="img/ga/01.jpg" </img></li>
-						<li class="horz"> <img src="img/ga/02.jpg" </img></li>
-						<li class="horz"> <img src="img/ga/03.jpg" </img></li>
-						<li class="horz"> <img src="img/ga/04.jpg" </img></li>
-						<li class="horz"> <img src="img/ga/05.jpg" </img></li>
-						<li class="horz"> <img src="img/ga/06.jpg" </img></li>
+						<li class="horz"> <img src="img/ga/01.jpg" </img> <p class="slidedesc">↑ Research Showcase during the inaugural HKDI Graphic Archive Symposium, 2025</p> </li>
+						<li class="horz"> <img src="img/ga/02.jpg" </img> <p class="slidedesc">&nbsp; &nbsp;</p> </li>
+						<li class="horz"> <img src="img/ga/03.jpg" </img> <p class="slidedesc">↑ Hand written receipts from 1940s to explore the humanistic trust within.</p> </li>
+						<li class="horz"> <img src="img/ga/04.jpg" </img> <p class="slidedesc">&nbsp; &nbsp;</p> </li>
+						<li class="horz"> <img src="img/ga/05.jpg" </img> <p class="slidedesc">&nbsp; &nbsp;</p> </li>
+						<li class="horz"> <img src="img/ga/06.jpg" </img> <p class="slidedesc">↑ One of my favs - Newspaper ads of <em>Da Da Department Store</em> that cut to the chase </p></li>
 						</ul>
 					</div>
 					<div class="details">
@@ -42,8 +42,8 @@
 						<p><em>Designing Well-beings: Everyday Consumption</em></p>
 					</div>
 					<div class="desc">
-						<p>It is my absolute honour to be awarded the inaugural Design Trust Graphic Archive Research Fellowship in partnership with the Hong Kong Design Institute (HKDI)! </p>
-						<p>This opportunity has allowed me to combine my experience in design with my research interests in food and systems comprehensive research project. The findings will be presented in a forthcoming publication, also culminating in an exhibition planned for 2028. </p>
+						<p>It is my absolute honour to be awarded the inaugural Design Trust Graphic Archive Research Fellowship in partnership with the Hong Kong Design Institute! </p>
+						<p>This opportunity has allowed me to combine my experience in design practice with my research interests in food and systems into a comprehensive research. The findings will be presented in a forthcoming publication, also culminating in an exhibition planned for 2028. Expand to see what I've been thinking. </p>
 
 						<p class="headlines">(...)</p>
 						<div class="desc open">
@@ -60,12 +60,12 @@
 				<div id="ds" class="project large">
 						<div class="slider">
 							<ul>
-							<li class="horz">  <img src="img/scuro/01.jpg" </img></li>
-							<li class="horz">  <img src="img/scuro/02.jpg" </img></li>
-							<li class="horz">  <img src="img/scuro/07.jpg" </img></li>
-							<li class="horz">  <img src="img/scuro/04.jpg" </img></li>
-							<li class="horz">  <img src="img/scuro/05.jpg" </img></li>
-							<li class="horz">  <img src="img/scuro/06.jpg" </img></li>
+							<li class="horz">  <img src="img/scuro/01.jpg" </img> <p class="slidedesc">↑ A hangman made of hay alongside an abandoned well in the vegetable garden</p> </li>
+							<li class="horz">  <img src="img/scuro/02.jpg" </img> <p class="slidedesc"> ...to mimic the patch of compressed soil found in another part of Cascina</p> </li>
+							<li class="horz">  <img src="img/scuro/07.jpg" </img> <p class="slidedesc">↑ A plant-based prosciutto woven from leaves and baskets found in the farmhouse</p> </li>
+							<li class="horz">  <img src="img/scuro/04.jpg" </img> <p class="slidedesc"> ... where once taken over by dust and pigeons.</p> </li>
+							<li class="horz">  <img src="img/scuro/05.jpg" </img> <p class="slidedesc">↑ A series of impressions of flora found to remind us the marks we've left behind.</p>  </li>
+							<li class="horz">  <img src="img/scuro/06.jpg" </img> <p class="slidedesc">&nbsp; &nbsp;</p> </li>
 							</ul>
 						</div>
 						<div class="details">
@@ -78,6 +78,12 @@
 							<p>Being part of the cohort of <a href="https://www.residenzalagoscuro.com" target="_blank"><em> Residenza Lago Scuro</em> </a> has unexpectedly become my personal highlight of 2025. Spending two weeks in Cascina Lago Scuro has given me the privilege to reflect and reshuffle my creative approach as a response to the external. </p>
 							<p>I’ve idled, wandered, observed. To conclude the journey I’ve curated a route with three site-specific installations for the open-house showcase, spotting those liminal spaces between human and nonhuman. </p>
 					  	<p>I’ve also loved every morning pastries (the butter!), exquisite meals prepared by the chefs and everyone, and all the late night chats and games. Such a dream to know all these practices and experiences from these creatives all around the world. I really missed the messiness and vibrancy!</p>
+							<p class="headlines">(...)</p>
+							<div class="desc open">
+									<p class="tab">
+										<p><a href="https://drive.google.com/file/d/1aigTwC7BLZwfTZoYTFjqAsIj46-ow11H/view?usp=share_link" target="_blank"> Did I mention that this residency have made it to the local newspaper too?</a> Kudos for Alex, Julia and Stefania who made this happen!</p>
+								</p>
+							</div>
 						</div>
 				</div>
 				</div>
